# tro-webpage-cli

./: .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/rules/: docs.md
.cursor/: mcp.json
.cursor/rules/: docs.mdc
.github/workflows/: ci.yml
config/: claude_desktop_config.example.json
src/: lib.rs  main.rs  mcp.rs  net.rs  page_cache.rs
src/dom/: mod.rs  readable.rs  spa.rs
tests/: extract.rs
tests/common/: factory.rs
